k8s/k8s/oci-ingress.yaml
# ============================================================
# OCI Native Ingress - Class
# ============================================================
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: reviewfilmes-oci
spec:
  controller: oci.oraclecloud.com/native-ingress-controller
  parameters:
    scope: Namespace
    namespace: native-ingress-controller-system
    apiGroup: ingress.oraclecloud.com
    kind: IngressClassParameters
    name: reviewfilmes-ingress-params

---
# ============================================================
# ReviewFilmes Ingress
# ============================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewfilmes
  namespace: homologacao
spec:
  ingressClassName: reviewfilmes-oci

  rules:
    - host: homologacao.ajotainformaticacloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reviewfilmes
                port:
                  number: 80
